# obsidian-mcp-research-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: manual-testing-guide.md
skills/obsidian-vault/: SKILL.md
skills/research-assistant/: SKILL.md
skills/research_scaffolding/: SKILL.md
skills/task-manager/: SKILL.md
src/tasknotes_mcp/: __init__.py  client.py  client_test.py  config.py  schema.py  server.py
tests/: test_schema.py
